--- a/app/presenters/templates/@layout.latte
+++ b/app/presenters/templates/@layout.latte
@@ -19,6 +19,29 @@
 <body>
 	<div class="container">
 		<h1>Welcome to Music Collection</h1>
+		{if $user->isLoggedIn()}
+        		Hi, {$user->identity->fullname}.
+        		(<a n:href=":Sign:out">Logout</a>)
+
+                <div>
+                    <ul>
+                        <li>
+                            Users
+                            <ul>
+                                <li><a n:href=":Users:List">List users</a></li>
+                                <li><a n:href=":Users:Add">Add user</a></li>
+                            </ul>
+                        </li>
+                        <li>
+                            Albums
+                            <ul>
+                                <li><a n:href=":Albums:List">List albums</a></li>
+                                <li><a n:href=":Albums:Add">Add album</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+        		</div>
+		{/if}
 		<div n:foreach="$flashes as $flash" class="alert alert-{$flash->type}">{$flash->message}</div>
 		{include content}
 	</div>
